--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <main class="main">
         <div class="content">
+            <h1>FizzBuzz</h1>
             <div class="generate-array">
                 <h3 id="array"></h3>
                 <div>
